# subprocess

./: .gitignore  CMakeLists.txt  toolchain-x86_64-w64-mingw32.cmake
src/cpp/: CMakeLists.txt
src/cpp/subprocess/: basic_types.hpp  cow_data.hpp  environ.hpp  pipe.cpp  pipe.hpp  pipe_var.hpp  process_builder.cpp  process_builder.hpp  process_builder_posix.cpp  process_builder_windows.cpp  shell_utils.cpp  shell_utils.hpp  utf8_to_utf16.cpp
test/: basic_test.cpp  cat_child.cpp  echo_main.cpp  examples.cpp  printenv_main.cpp  sleep_main.cpp
